--- a/variables.env
+++ b/variables.env
@@ -2,5 +2,9 @@ FRONTEND_URL="http://localhost:7777"
 PRISMA_ENDPOINT="https://us1.prisma.sh/jurgen-kela/sick-fits/dev"
 PRISMA_SECRET="thisisasecret"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_123youchanget his"
+STRIPE_SECRET="sk_test_MvcAKtFuHbJWPd8dxDE9wFUS"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT="2525"
+MAIL_USER="7644455cda1197"
+MAIL_PASS="f4cc43106ed48e"
